refactor: rename Java files for improved structure and clarity